--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -3,6 +3,7 @@
     padding: 0;
     margin: 0;
     user-select: none;
+    font-family: 'Pixelify Sans', cursive;
 }
 body{
     background-color: black;
