--- a/src/Pages/Home/Screens/MainTitle/Spanish/aboutMySpanish/styles.css
+++ b/src/Pages/Home/Screens/MainTitle/Spanish/aboutMySpanish/styles.css
@@ -61,3 +61,9 @@
     50% { border-color: transparent}
     
    }
+
+@media (min-width: 1440px ) {
+    .textBox_content{
+        font-size:1.3rem;
+    }
+    }
