--- a/src/Pages/Home/Screens/MainTitle/Spanish/contactSpanish/styles.css
+++ b/src/Pages/Home/Screens/MainTitle/Spanish/contactSpanish/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Silkscreen&display=swap');
+
 .contactMain{
     width: 100%;
     height: 100%;
@@ -36,7 +38,28 @@
     box-shadow:5px 5px 0 0;
     position: absolute;
 }
+.numberScreen{
+    width: 50%;
+    height: 13%;
+    margin-top: 3%;
+    margin-left: 38%;
+    background-color: rgb(0, 102, 0);
+    position: absolute;
 
+    border: 5px solid rgb(0, 160, 0);
+    box-shadow:2px 2px 0 0;
+    border-radius: 5px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.numberScreenCont{
+    font-family: 'Pixelify Sans', sans-serif;
+    font-family: 'Silkscreen', sans-serif;
+    font-size: 1.5rem;
+    color: rgb(0, 31, 0);
+}
 .phoneButtonBox{
     width: 60%;
     height: 70%;
