--- a/src/Pages/Home/Screens/Language/styles.css
+++ b/src/Pages/Home/Screens/Language/styles.css
@@ -1,3 +1,8 @@
+.LanguageScreen_Main{
+    
+    width: 100%;
+    height: 100%;
+}
 .LanguageBox{
     width: 100%;
     height: 100%;
@@ -7,7 +12,6 @@
     justify-content: center;
     align-items: center;
     border: 5px dashed red;
-    
 }
 
 
