--- a/src/Pages/Home/Screens/MainTitle/Spanish/aboutMySpanish/styles.css
+++ b/src/Pages/Home/Screens/MainTitle/Spanish/aboutMySpanish/styles.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     align-items: center;
 }
+
+/*Parte de arriba*/
 .tomySection{
     width: 100%;
     height: 55%;
@@ -17,11 +19,12 @@
     height: 90%;
     
 }
-
+/*Contenido de la derecha*/
 .textBubbleeBox{
     width: 100%;
     height: 50%;
     position: relative;
+    
     
 }
 
@@ -40,7 +43,8 @@
     text-align: left;
     white-space: nowrap;
     
-    width: 12ch;
+    width: 30ch;
+    background-color: green;
 
     overflow:hidden;
 
@@ -59,7 +63,6 @@
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -77,9 +80,12 @@
     display: block;
     /* border-right: 1px solid; */
     white-space: nowrap;
-    width: 100%;
-   
-    
+    width: 30%;
+
+}
+.textBox_questions:hover{
+    color: red;
+    cursor: pointer;
 }
 
 @keyframes typing {
@@ -107,7 +113,7 @@
         left: 6%;
     }
     .dialogueText{
-        font-size:1.5rem;
+        font-size:1.2rem;
         top: 40%;
         left: 8%;
     }
