--- a/src/Pages/Home/Screens/MainTitle/Spanish/mySkillsSpanish/styles.css
+++ b/src/Pages/Home/Screens/MainTitle/Spanish/mySkillsSpanish/styles.css
@@ -1,16 +1,12 @@
 .mySkillsMain{
     width: 100%;
     height: 100%;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    display: flex;
 }
 
-.inventoryGeneralDetail{
-    align-items: center;
-}
 .mySkillsBox{
     width: 90%;
     height: 80%;
@@ -21,6 +17,8 @@
     justify-content: center;
     align-items: center;
     background-color: orange;
+    border-radius: 5px;
+    border: rgb(255, 136, 0) solid 5px; ;
 }
 .inventoryTitle{
     position: absolute;
@@ -43,7 +41,7 @@
     
     display: grid;
     grid-template-columns: repeat(4, 70px ); 
-    grid-template-rows: repeat(3, 70px); /* Altura de las filas */
+    grid-template-rows: repeat(3, 70px); /* altura de las filas */
     grid-gap: 10px; 
     
 }
@@ -52,14 +50,48 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid white;
+    border: 5px solid rgb(255, 255, 255);
+    cursor: pointer;
 }
 
 .inventorySpace:hover{
     transition: 0.5s;
     background-color: white;
-    border: 2px solid rgb(255, 136, 0);
+    border-radius: 10px;
 }
+
+/*Detalles de objeto*/
+
+.itemDetailBox{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+.itemDetail{
+    width: 96%;
+    height: 60%;
+    background-color: rgb(255, 221, 0);
+    display: flex;
+    border: 5px solid rgb(255, 140, 0);
+    border-radius: 5px;
+    position: absolute;
+    z-index: 99;
+    display: flex;
+    align-items: center;
+}
+
+.textInfoBox{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    width: 55%;
+}
+.closeIcon:hover{transform: scale(1.1);}
+
 
 @media (min-width: 1440px ) {
         .inventoryTitle{ top: 3.5%;}
