--- a/src/Pages/Home/Screens/MainTitle/Spanish/mySkillsSpanish/styles.css
+++ b/src/Pages/Home/Screens/MainTitle/Spanish/mySkillsSpanish/styles.css
@@ -61,6 +61,10 @@
 }
 
 /*Detalles de objeto*/
+.itemDetailImage{
+    width: 40%;
+    height: 70%;
+}
 
 .itemDetailBox{
     width: 100%;
@@ -72,7 +76,7 @@
 
 }
 .itemDetail{
-    width: 96%;
+    width: 99%;
     height: 60%;
     background-color: rgb(255, 221, 0);
     display: flex;
@@ -90,7 +94,7 @@
     align-items: start;
     width: 55%;
 }
-.closeIcon{ width: 15%;}
+.closeIcon{ width: 12%;}
 .closeIcon:hover{transform: scale(1.1);}
 
 
@@ -103,6 +107,13 @@
         }
        .closeIcon{
         width: 10%;
+       }
+       .typeItem{
+            position: static;
+        
+       }
+       .itemDetailImage{
+        height: 90%;
        }
     }
 
