--- a/src/Pages/Home/Screens/MainTitle/Spanish/contactSpanish/mailSumbit/styles.css
+++ b/src/Pages/Home/Screens/MainTitle/Spanish/contactSpanish/mailSumbit/styles.css
@@ -6,6 +6,40 @@
     height: 100vh;
 }
 
+.paperImgDiv{
+    width: 20rem;
+    height: 30rem;
+    box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 1);
+}
+
+.paperTittle{
+    position: absolute;
+    top: 10%;
+}
+
+.sello{
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: rgb(192, 81, 17);
+    border: 1px solid black;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 5px 5px 0.5px rgba(0, 0, 0, 1);
+    
+    bottom: 2%;
+    right: 3%;
+}
+.selloCirc{
+    width: 40px;
+    height: 40px;
+    background-color: rgb(63, 23, 0);
+    border: 1px solid black;
+    border-radius: 100%;
+}
+
 
 
 .numberScreenCont{
@@ -15,6 +49,7 @@
     color: rgb(0, 31, 0);
     animation: numbersScreenAnimation 0.98s  infinite ;
 }
+
 
 
 
