--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -90,7 +90,7 @@ body{
 
 .boton_1, .boton_2,.joystick{user-select: none;}
 .redArrow{
-    right: 28%;
+    right: 22%;
 }
 .redArrowText{
     right: 40%;
@@ -183,7 +183,9 @@ body{
         bottom: 10%;
         left: 90%;
     }
-    
+    .redArrow{
+        right: 28%;
+    }
   }
 
 .onScreenStyle{
